--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack build --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
+    "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -32,15 +30,11 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "html-webpack-plugin": "^5.5.3",
     "postcss-loader": "^7.3.3",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "vite": "^4.3.9",
-    "webpack": "^5.86.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "vite": "^4.3.9"
   },
   "main": "vite.config.js",
   "keywords": [],
